<resources>
    <string name="app_name">TeachMeNotes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notes_fragment">Notes Fragment</string>
    <string name="tasks_fragment">Tasks Fragment</string>
    <string name="write_the_note">Write the note</string>
    <string name="title">Title</string>
    <string name="title_notes_list">Title</string>
    <string name="write_the_note_notes_list">Write the note</string>
    <string name="date_notes_list">Date</string>
    <string name="delete_popup">Delete</string>
    <string name="default_color">#ffffff</string>
    <string name="write_the_task">Write the task:</string>
    <string name="ok_alert_dialog">OK</string>
    <string name="cancel_alert_dialog">Cancel</string>
    <string name="note_deleted">Note successfully deleted</string>
    <string name="task_deleted">Task successfully deleted</string>
    <string name="plus_floating_button">plus_floating_button</string>
    <string name="search">Search</string>
    <string name="lines">Lines</string>
    <string name="columns">Columns</string>
    <string name="date_asc">Date ASC</string>
    <string name="date_desc">Date DESC</string>
    <string name="list">List</string>
    <string name="check_inet">Check your internet connection, please</string>
    <string name="teachmenotes">TeachMeNotes</string>
</resources>